--- a/cwContextGenerator/cwContextGenerator.csproj
+++ b/cwContextGenerator/cwContextGenerator.csproj
@@ -56,6 +56,26 @@
   <PropertyGroup>
     <StartupObject>cwContextGenerator.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="CasewiseProfessionalServices, Version=1.0.2.0, Culture=neutral, PublicKeyToken=f7aac48247cd2f2f, processorArchitecture=x86">
@@ -108,13 +128,14 @@
     <Compile Include="DataAnalysis\CwContextMataModelManager.cs" />
     <Compile Include="DataAnalysis\CwDiagram.cs" />
     <Compile Include="DataAnalysis\CwDiagramContextManager.cs" />
-    <Compile Include="DataAnalysis\CwDiagramDataStore.cs" />
+    <Compile Include="DataAnalysis\CwDiagramContext.cs" />
     <Compile Include="DataAnalysis\CwJoiner.cs" />
     <Compile Include="DataAnalysis\CwShape.cs" />
-    <Compile Include="DataAnalysis\DiagramContext.cs" />
-    <Compile Include="DataAnalysis\DiagramContextDataStore.cs" />
-    <Compile Include="DataAnalysis\ShapeComparer.cs" />
-    <Compile Include="DataAnalysis\ShapeCouple.cs" />
+    <Compile Include="DataAnalysis\CwDiagramContextLaboratory.cs" />
+    <Compile Include="DataAnalysis\CwDiagramContextDataStore.cs" />
+    <Compile Include="DataAnalysis\ICwShape.cs" />
+    <Compile Include="DataAnalysis\CwShapeComparer.cs" />
+    <Compile Include="DataAnalysis\CwShapeCouple.cs" />
     <Compile Include="Data\CwDiagramDataLoader.cs" />
     <Compile Include="GUI\EditModeGUI.cs">
       <SubType>Form</SubType>
@@ -161,7 +182,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Utilities\Tool.cs" />
+    <Compile Include="Utilities\Tool.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -190,6 +213,10 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ClassDiagram\Algorithm.cd" />
+    <None Include="ClassDiagram\Configuration.cd" />
+    <None Include="ClassDiagram\GlobalView.cd" />
+    <None Include="ClassDiagram\GUI.cd" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ContextGeneratorMetaModel.xml" />
